# pcs

benchmarks/: CMakeLists.txt
benchmarks/controller/: extended.cpp  extended2.cpp
src/pcs/: CMakeLists.txt
src/pcs/controller/: realisability.cpp  realisability.h  topology.cpp  topology.h
src/pcs/controller/solvers/: best.cpp  best.h  local_best.cpp  local_best.h
src/pcs/machine/: machine.cpp  machine.h
src/pcs/product/: recipe.h
tests/: CMakeLists.txt
tests/controller/: realisability.cpp
